--- a/index.html
+++ b/index.html
@@ -17,16 +17,24 @@
 
 </head>
 
+
+  <div class="overall">
+
 <body>
   <div class="centre-work">
     <img src="images/image-qr-code.png" alt="Frontend-mentor-QRcode">
-    <h2>Improve your front-end skills by building projects</h2>
-    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <h1>Improve your front-end skills by building projects</h1>
+    <p class="qrcode">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
+  </body>
+  <footer>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Eugene Boateng</a>.
+    <span>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</span>
+    <br>
+    <span>Coded by <a href="https://github.com/jumpmanftee">Eugene Boateng</a>.</span>
   </div>
-</body>
+</footer>
+  </div>
+
 
 </html>
